--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 <body>
     <div class="calculator-container">
         <h2 class="calculator-title">Position Size & Risk Calculator</h2>
+
+        <!-- Add this right after the calculator-title -->
+<div class="theme-toggle-container">
+    <label class="theme-toggle" for="theme-switch">
+        <input type="checkbox" id="theme-switch">
+        <span class="toggle-track">
+            <span class="toggle-indicator">
+                <span class="toggle-icon light">☀️</span>
+                <span class="toggle-icon dark">🌙</span>
+            </span>
+        </span>
+    </label>
+</div>
         
         <div class="grid">
             <div>
