--- a/index.html
+++ b/index.html
@@ -3,125 +3,154 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Position Size & Risk Calculator</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <meta name="description" content="Calculate trading position size and risk management for stock trades">
+    <title>Position Size Calculator</title>
+    <link rel="preload" href="css/styles.css" as="style">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
-    <header>
-        <h1>Position Size & Risk Calculator</h1>
-        <div class="theme-toggle">
-            <label for="theme-switch">Toggle Theme</label>
-            <input type="checkbox" id="theme-switch">
-            <span class="slider"></span>
+    <form id="calculatorForm" class="calculator-container" role="main">
+        <h1 class="calculator-title">Position Size & Risk Calculator</h1>
+
+        <div class="theme-toggle-container">
+            <label class="theme-toggle" for="theme-switch">
+                <input type="checkbox" id="theme-switch" aria-label="Toggle between light and dark theme">
+                <span class="toggle-track">
+                    <span class="toggle-indicator">
+                        <span class="toggle-icon light">☀️</span>
+                        <span class="toggle-icon dark">🌙</span>
+                    </span>
+                </span>
+            </label>
         </div>
-    </header>
 
-    <main class="calculator-container">
-        <section class="account-info">
-            <h2>Account Information</h2>
-            <div class="input-group">
-                <label for="account-size">Account Size</label>
-                <div class="currency-input">
-                    <span>$</span>
-                    <input type="number" id="account-size" step="0.01" min="0" placeholder="10000">
-                </div>
-            </div>
-            <div class="risk-percentage">
-                <label>Risk per Trade (%)</label>
-                <div class="percentage-buttons">
-                    <button type="button" data-value="0.25">0.25%</button>
-                    <button type="button" data-value="0.5">0.5%</button>
-                    <button type="button" data-value="0.75">0.75%</button>
-                    <button type="button" data-value="1" class="active">1%</button>
-                    <button type="button" data-value="1.5">1.5%</button>
-                    <button type="button" data-value="2">2%</button>
-                    <button type="button" data-value="3">3%</button>
-                </div>
+        <div class="grid">
+            <div>
+                <h2 class="section-title">Account Information</h2>
+
                 <div class="input-group">
-                    <label for="custom-risk">Custom Risk (%)</label>
-                    <input type="number" id="custom-risk" step="0.01" min="0" max="100" value="1">
+                    <label class="input-label" for="accountSize">Account Size ($)</label>
+                    <div class="input-container">
+                        <span class="input-prefix">$</span>
+                        <input type="text" id="accountSize" class="text-input" placeholder="Enter account size (e.g. 10,000)" required>
+                    </div>
                 </div>
-            </div>
-        </section>
 
-        <section class="trade-details">
-            <h2>Trade Details</h2>
-            <div class="input-group">
-                <label for="entry-price">Entry Price</label>
-                <div class="currency-input">
-                    <span>$</span>
-                    <input type="number" id="entry-price" step="0.01" min="0" placeholder="100">
+                <div class="input-group">
+                    <label class="input-label" for="riskPercentage">Risk per Trade (%)</label>
+                    <div class="risk-buttons">
+                        <button type="button" class="risk-button" data-value="0.25">0.25%</button>
+                        <button type="button" class="risk-button" data-value="0.5">0.5%</button>
+                        <button type="button" class="risk-button" data-value="0.75">0.75%</button>
+                        <button type="button" class="risk-button active" data-value="1">1%</button>
+                        <button type="button" class="risk-button" data-value="1.5">1.5%</button>
+                        <button type="button" class="risk-button" data-value="2">2%</button>
+                        <button type="button" class="risk-button" data-value="3">3%</button>
+                    </div>
+                    <div class="input-container">
+                        <input type="number" id="riskPercentage" class="number-input number-input-pct" value="1" min="0" max="100" step="0.05" required>
+                        <span class="input-suffix">%</span>
+                    </div>
                 </div>
             </div>
-            <div class="input-group">
-                <label for="stop-loss">Stop Loss Price <span class="helper-text">(Must be below entry)</span></label>
-                <div class="currency-input">
-                    <span>$</span>
-                    <input type="number" id="stop-loss" step="0.01" min="0" placeholder="95">
-                </div>
-            </div>
-            <div class="input-group">
-                <label for="target-price">Target Price <span class="helper-text">(Optional, should be above entry)</span></label>
-                <div class="currency-input">
-                    <span>$</span>
-                    <input type="number" id="target-price" step="0.01" min="0" placeholder="110">
-                </div>
-            </div>
-        </section>
 
-        <button type="button" class="clear-button">Clear Calculator</button>
+            <div>
+                <h2 class="section-title">Trade Details</h2>
 
-        <section class="results">
-            <h2>Results</h2>
-            <div class="result-cards">
-                <div class="card">
-                    <h3>Shares to Purchase</h3>
-                    <p id="shares">-</p>
+                <div class="input-group">
+                    <label class="input-label" for="entryPrice">Entry Price ($)</label>
+                    <div class="input-container">
+                        <span class="input-prefix">$</span>
+                        <input type="number" id="entryPrice" class="number-input" placeholder="Enter entry price" min="0.01" step="0.01" required>
+                    </div>
                 </div>
-                <div class="card">
-                    <h3>Position Size</h3>
-                    <p id="position-size">-</p>
+
+                <div class="input-group">
+                    <label class="input-label" for="stopLossPrice">Stop Loss Price ($)</label>
+                    <div class="input-container">
+                        <span class="input-prefix">$</span>
+                        <input type="number" id="stopLossPrice" class="number-input" placeholder="Enter stop loss price" min="0.01" step="0.01" required>
+                    </div>
+                    <div id="stopLossError" class="error-text hidden"></div>
+                    <div class="helper-text">Must be below entry price</div>
                 </div>
-                <div class="card">
-                    <h3>% of Account</h3>
-                    <p id="percent-account">-</p>
-                </div>
-                <div class="card">
-                    <h3>Total Risk Amount</h3>
-                    <p id="risk-amount">-</p>
-                </div>
-                <div class="card">
-                    <h3>R Multiple</h3>
-                    <p id="r-multiple">-</p>
-                </div>
-                <div class="card">
-                    <h3>5R Target Price</h3>
-                    <p id="five-r-target">-</p>
-                    <span class="trim-label">Trim Zone</span>
+
+                <div class="input-group">
+                    <label class="input-label" for="targetPrice">Target Price ($) - Optional</label>
+                    <div class="input-container">
+                        <span class="input-prefix">$</span>
+                        <input type="number" id="targetPrice" class="number-input" placeholder="Enter target price (optional)" min="0" step="0.01">
+                    </div>
+                    <div id="targetPriceError" class="error-text hidden"></div>
+                    <div class="helper-text">Should be above entry price</div>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="info-section">
-            <button type="button" class="toggle-info">How is position size calculated?</button>
-            <div class="info-content" hidden>
-                <p>Position size is calculated as follows:</p>
-                <ul>
-                    <li><strong>Position Size</strong> = Account Size × Risk Percentage</li>
-                    <li><strong>Shares to Purchase</strong> = Position Size ÷ (Entry Price - Stop Loss Price)</li>
-                    <li><strong>% of Account</strong> = (Position Size ÷ Account Size) × 100</li>
-                    <li><strong>Total Risk Amount</strong> = Account Size × Risk Percentage</li>
-                    <li><strong>R Multiple</strong> = (Target Price - Entry Price) ÷ (Entry Price - Stop Loss Price)</li>
-                    <li><strong>5R Target Price</strong> = Entry Price + (5 × (Entry Price - Stop Loss Price))</li>
-                </ul>
+        <button type="button" id="clearButton" class="clear-button" aria-label="Clear all calculator fields">Clear Calculator</button>
+
+        <div class="results-section">
+            <h2 class="results-title">Results</h2>
+
+            <div class="results-grid">
+                <div class="result-card full-width">
+                    <div class="result-label">Shares to Purchase</div>
+                    <div id="sharesValue" class="result-value large">-</div>
+                </div>
+
+                <div class="result-card">
+                    <div class="result-label">Position Size</div>
+                    <div id="positionSizeValue" class="result-value">-</div>
+                </div>
+
+                <div class="result-card">
+                    <div class="result-label">Total Risk Amount</div>
+                    <div id="totalRiskValue" class="result-value">-</div>
+                </div>
+
+                <div class="result-card">
+                    <div class="result-label">% of Account</div>
+                    <div id="percentOfAccountValue" class="result-value">-</div>
+                </div>
+
+                <div class="result-card">
+                    <div class="result-label">R Multiple</div>
+                    <div id="rMultipleValue" class="result-value">- R</div>
+                </div>
+
+                <div class="result-card full-width five-r-card">
+                    <div class="result-label">
+                        5R Target Price
+                        <span class="trim-tag">Trim Zone</span>
+                    </div>
+                    <div id="fiveRTargetValue" class="result-value trim">-</div>
+                </div>
             </div>
-        </section>
-    </main>
+        </div>
 
-    <footer>
-        <p>Created by xAI</p>
-    </footer>
+        <button type="button" id="infoButton" class="info-button" aria-expanded="false">
+            <span id="infoIcon" class="info-icon">+</span>
+            How is position size calculated?
+        </button>
+
+        <div id="infoContent" class="info-content hidden" role="region" aria-expanded="false">
+            <p>Position size is calculated using the following formula:</p>
+            <ol>
+                <li>Calculate risk amount in dollars: Account Size × Risk Percentage</li>
+                <li>Calculate risk per share: Entry Price - Stop Loss Price</li>
+                <li>Calculate number of shares: Risk Amount ÷ Risk Per Share</li>
+                <li>Calculate position size: Number of Shares × Entry Price</li>
+            </ol>
+            <p>This approach ensures you never risk more than your specified percentage of account on any trade.</p>
+        </div>
+
+<footer class="calculator-footer">
+    Made with <svg class="heart-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" fill="#ff6b6b"/></svg> by Skyler
+    <a href="https://discord.gg/t6BZV9nQ">@applevisionpro</a>
+</footer>
+    </form>
+
+    <script src="js/script.js" defer></script>
 </body>
 </html>
