--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
         </div>
 
 <footer class="calculator-footer">
-    Made with ❤️ for safer trading
-    <a href="https://discord.gg/t6BZV9nQ">@applevisionpro</a>
+    Made with ❤️ for safer trading by Skyler Berry
+    <a href="http://x.com/skylerber">X</a>
 </footer>
     </form>
 
