--- a/index.html
+++ b/index.html
@@ -126,6 +126,29 @@
                     </div>
                     <div id="fiveRTargetValue" class="result-value trim">-</div>
                 </div>
+
+                <!-- New Profit Section - Only visible when Target Price is entered -->
+                <div id="profitSection" class="profit-section hidden">
+                    <h3 class="profit-title">Potential Profit</h3>
+                    <div class="profit-grid">
+                        <div class="result-card">
+                            <div class="result-label">Profit per Share</div>
+                            <div id="profitPerShareValue" class="result-value profit">-</div>
+                        </div>
+                        <div class="result-card">
+                            <div class="result-label">Total Profit</div>
+                            <div id="totalProfitValue" class="result-value profit">-</div>
+                        </div>
+                        <div class="result-card">
+                            <div class="result-label">Return on Investment</div>
+                            <div id="roiValue" class="result-value profit">-</div>
+                        </div>
+                        <div class="result-card">
+                            <div class="result-label">Risk/Reward Ratio</div>
+                            <div id="riskRewardValue" class="result-value profit">-</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -143,11 +166,18 @@
                 <li>Calculate position size: Number of Shares × Entry Price</li>
             </ol>
             <p>This approach ensures you never risk more than your specified percentage of account on any trade.</p>
+            <p>If a target price is specified, additional profit calculations are shown:</p>
+            <ol>
+                <li>Profit Per Share: Target Price - Entry Price</li>
+                <li>Total Profit: Profit Per Share × Number of Shares</li>
+                <li>Return on Investment (ROI): (Total Profit ÷ Position Size) × 100</li>
+                <li>Risk/Reward Ratio: Total Profit ÷ Total Risk Amount</li>
+            </ol>
         </div>
 
 <footer class="calculator-footer">
-    Made with ❤️ for safer trading by Skyler Berry
-    <a href="http://x.com/skylerber">X</a>
+    Made with <svg class="heart-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" fill="#ff6b6b"/></svg> by Skyler
+    <a href="https://discord.gg/t6BZV9nQ">@applevisionpro</a>
 </footer>
     </form>
 
