--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
                             <div id="profitPerShareValue" class="result-value profit">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-label">Total Profit</div>
+                            <div class="result-label">Total Profit
+                                <button id="addProfitButton" class="add-profit-button" aria-label="Add profit to account size">+</button>
+                            </div>
                             <div id="totalProfitValue" class="result-value profit">-</div>
                         </div>
                         <div class="result-card">
