--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
                             <div id="profitPerShareValue" class="result-value profit">-</div>
                         </div>
                         
-                        <!-- CHANGE HERE: Modified Total Profit card to include the plus button -->
+                        <!-- UPDATED Total Profit card with fixed button -->
                         <div class="result-card">
                             <div class="result-label">Total Profit</div>
                             <div class="profit-container">
                                 <div id="totalProfitValue" class="result-value profit">-</div>
-                                <button type="button" id="addProfitButton" class="add-profit-button" aria-label="Add profit to account size" disabled>
+                                <button type="button" id="addProfitButton" class="add-profit-button" aria-label="Add profit to account size" title="Add profit to account size">
                                     <span class="add-icon">+</span>
                                 </button>
                             </div>
