--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
                         
                         <!-- UPDATED Total Profit card with fixed button -->
                         <div class="result-card">
-                            <div class="result-label">Total Profit</div>
-                            <div class="profit-container">
-                                <div id="totalProfitValue" class="result-value profit">-</div>
-                                <button type="button" id="addProfitButton" class="add-profit-button" aria-label="Add profit to account size" title="Add profit to account size">
-                                    <span class="add-icon">+</span>
-                                </button>
-                            </div>
-                        </div>
+    <div class="result-label">Total Profit</div>
+    <div class="profit-container">
+        <div id="totalProfitValue" class="result-value profit">-</div>
+        <button type="button" id="addProfitButton" class="add-profit-button" aria-label="Add profit to account size">
+            <span class="add-icon">+</span>
+        </button>
+    </div>
+</div>
                         
                         <div class="result-card">
                             <div class="result-label">Return on Investment</div>
