--- a/index.html
+++ b/index.html
@@ -135,10 +135,13 @@
                             <div class="result-label">Profit per Share</div>
                             <div id="profitPerShareValue" class="result-value profit">-</div>
                         </div>
-                        <div class="result-card">
-                            <div class="result-label">Total Profit</div>
-                            <div id="totalProfitValue" class="result-value profit">-</div>
-                        </div>
+                       <div class="result-card">
+    <div class="result-label">Total Profit</div>
+    <div class="profit-with-button">
+        <span id="totalProfitValue" class="result-value profit">-</span>
+        <button type="button" id="addProfitButton" class="add-profit-button" title="Add to Account Size">+</button>
+    </div>
+</div>
                         <div class="result-card">
                             <div class="result-label">Return on Investment</div>
                             <div id="roiValue" class="result-value profit">-</div>
