--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
         </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js" defer></script>
 </body>
 </html>
