--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     <form id="calculatorForm" class="calculator-container" role="main">
+        <h1 class="calculator-title">Position Size & Risk Calculator</h1>
+
         <div class="theme-toggle-container">
             <label class="theme-toggle" for="theme-switch">
                 <input type="checkbox" id="theme-switch" aria-label="Toggle between light and dark theme">
@@ -22,8 +24,6 @@
                 </span>
             </label>
         </div>
-
-        <h1 class="calculator-title">POSITION SIZE<br><span class="title-break">CALCULATOR</span></h1>
 
         <div class="grid">
             <div>
@@ -94,7 +94,7 @@
             <h2 class="results-title">Results</h2>
 
             <div class="results-grid">
-                <div class="result-card full-width accent">
+                <div class="result-card full-width">
                     <div class="result-label">Shares to Purchase</div>
                     <div id="sharesValue" class="result-value large">-</div>
                 </div>
@@ -119,7 +119,7 @@
                     <div id="rMultipleValue" class="result-value">- R</div>
                 </div>
 
-                <div class="result-card full-width accent">
+                <div class="result-card full-width five-r-card">
                     <div class="result-label">
                         5R Target Price
                         <span class="trim-tag">Trim Zone</span>
@@ -127,6 +127,7 @@
                     <div id="fiveRTargetValue" class="result-value trim">-</div>
                 </div>
 
+                <!-- New Profit Section - Only visible when Target Price is entered -->
                 <div id="profitSection" class="profit-section hidden">
                     <h3 class="profit-title">Potential Profit</h3>
                     <div class="profit-grid">
@@ -134,13 +135,13 @@
                             <div class="result-label">Profit per Share</div>
                             <div id="profitPerShareValue" class="result-value profit">-</div>
                         </div>
-                        <div class="result-card">
-                            <div class="result-label">Total Profit</div>
-                            <div class="profit-with-button">
-                                <span id="totalProfitValue" class="result-value profit">-</span>
-                                <button type="button" id="addProfitButton" class="add-profit-button" title="Add to Account Size">+</button>
-                            </div>
-                        </div>
+                       <div class="result-card">
+    <div class="result-label">Total Profit</div>
+    <div class="profit-with-button">
+        <span id="totalProfitValue" class="result-value profit">-</span>
+        <button type="button" id="addProfitButton" class="add-profit-button" title="Add to Account Size">+</button>
+    </div>
+</div>
                         <div class="result-card">
                             <div class="result-label">Return on Investment</div>
                             <div id="roiValue" class="result-value profit">-</div>
@@ -177,10 +178,10 @@
             </ol>
         </div>
 
-        <footer class="calculator-footer">
-            Made with <svg class="heart-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" fill="#ff0000"/></svg> by Skyler
-            <a href="https://discord.gg/t6BZV9nQ">@applevisionpro</a>
-        </footer>
+<footer class="calculator-footer">
+    Made with <svg class="heart-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" fill="#ff6b6b"/></svg> by Skyler
+    <a href="https://discord.gg/t6BZV9nQ">@applevisionpro</a>
+</footer>
     </form>
 
     <script src="js/script.js" defer></script>
