--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                 <div class="input-group">
                     <label class="input-label" for="riskPercentage">Risk per Trade (%)</label>
                     <div class="risk-buttons">
-                        <button type="button" class="risk-button" data-value="0.25">0.25%</button>
+                        <button type="button" class="risk-button" data-value="0.1">0.1%</button>
+                        <button type="button" class="risk-button" data-value="0.2">0.2%</button>
+                        <button type="button" class="risk-button" data-value="0.3">0.3%</button>
                         <button type="button" class="risk-button" data-value="0.5">0.5%</button>
-                        <button type="button" class="risk-button" data-value="0.75">0.75%</button>
-                        <button type="button" class="risk-button active" data-value="1">1%</button>
-                        <button type="button" class="risk-button" data-value="1.5">1.5%</button>
-                        <button type="button" class="risk-button" data-value="2">2%</button>
-                        <button type="button" class="risk-button" data-value="3">3%</button>
+                        <button type="button" class="risk-button active" data-value="0.75">0.75%</button>
+                        <button type="button" class="risk-button" data-value="1">1%</button>
+                        <button type="button" class="risk-button" data-value="2">2%</button
                     </div>
                     <div class="input-container">
                         <input type="number" id="riskPercentage" class="number-input number-input-pct" value="1" min="0" max="100" step="0.05" required>
