--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <form id="calculatorForm" class="calculator-container" role="main">
-        <h1 class="calculator-title">Position Size & Risk Calculator</h1>
+      <h1 class="calculator-title">Stock Trading Calculator</h1>
+<p class="calculator-subtitle">Smart position sizing for safer trading - never risk too much on a single trade</p>
 
         <div class="theme-toggle-container">
             <label class="theme-toggle" for="theme-switch">
@@ -40,13 +41,12 @@
                 <div class="input-group">
                     <label class="input-label" for="riskPercentage">Risk per Trade (%)</label>
                     <div class="risk-buttons">
-                        <button type="button" class="risk-button" data-value="0.25">0.25%</button>
-                        <button type="button" class="risk-button" data-value="0.5">0.5%</button>
-                        <button type="button" class="risk-button" data-value="0.75">0.75%</button>
-                        <button type="button" class="risk-button active" data-value="1">1%</button>
-                        <button type="button" class="risk-button" data-value="1.5">1.5%</button>
-                        <button type="button" class="risk-button" data-value="2">2%</button>
-                        <button type="button" class="risk-button" data-value="3">3%</button>
+                      <!-- NEW -->
+                      <button type="button" class="risk-button" data-value="0.1">0.1%</button>
+                      <button type="button" class="risk-button" data-value="0.25">0.25%</button>
+                      <button type="button" class="risk-button" data-value="0.5">0.5%</button>
+                      <button type="button" class="risk-button" data-value="0.75">0.75%</button>
+                      <button type="button" class="risk-button active" data-value="1">1%</button>
                     </div>
                     <div class="input-container">
                         <input type="number" id="riskPercentage" class="number-input number-input-pct" value="1" min="0" max="100" step="0.05" required>
@@ -90,11 +90,13 @@
 
         <button type="button" id="clearButton" class="clear-button" aria-label="Clear all calculator fields">Clear Calculator</button>
 
+        <!-- Updated Results Section with new 3x2 grid layout -->
         <div class="results-section">
             <h2 class="results-title">Results</h2>
 
             <div class="results-grid">
-                <div class="result-card full-width">
+                <!-- Row 1 -->
+                <div class="result-card">
                     <div class="result-label">Shares to Purchase</div>
                     <div id="sharesValue" class="result-value large">-</div>
                 </div>
@@ -104,11 +106,18 @@
                     <div id="positionSizeValue" class="result-value">-</div>
                 </div>
 
+                <!-- Row 2 -->
+                <div class="result-card">
+                    <div class="result-label">Stop Distance</div>
+                    <div id="stopDistanceValue" class="result-value">-</div>
+                </div>
+
                 <div class="result-card">
                     <div class="result-label">Total Risk Amount</div>
                     <div id="totalRiskValue" class="result-value">-</div>
                 </div>
 
+                <!-- Row 3 -->
                 <div class="result-card">
                     <div class="result-label">% of Account</div>
                     <div id="percentOfAccountValue" class="result-value">-</div>
@@ -119,6 +128,7 @@
                     <div id="rMultipleValue" class="result-value">- R</div>
                 </div>
 
+                <!-- 5R Target Price (still full width) -->
                 <div class="result-card full-width five-r-card">
                     <div class="result-label">
                         5R Target Price
@@ -127,7 +137,7 @@
                     <div id="fiveRTargetValue" class="result-value trim">-</div>
                 </div>
 
-                <!-- New Profit Section - Only visible when Target Price is entered -->
+                <!-- Profit Section remains the same -->
                 <div id="profitSection" class="profit-section hidden">
                     <h3 class="profit-title">Potential Profit</h3>
                     <div class="profit-grid">
@@ -135,13 +145,13 @@
                             <div class="result-label">Profit per Share</div>
                             <div id="profitPerShareValue" class="result-value profit">-</div>
                         </div>
-                       <div class="result-card">
-    <div class="result-label">Total Profit</div>
-    <div class="profit-with-button">
-        <span id="totalProfitValue" class="result-value profit">-</span>
-        <button type="button" id="addProfitButton" class="add-profit-button" title="Add to Account Size">+</button>
-    </div>
-</div>
+                        <div class="result-card">
+                            <div class="result-label">Total Profit</div>
+                            <div class="profit-with-button">
+                                <span id="totalProfitValue" class="result-value profit">-</span>
+                                <button type="button" id="addProfitButton" class="add-profit-button" title="Add to Account Size">+</button>
+                            </div>
+                        </div>
                         <div class="result-card">
                             <div class="result-label">Return on Investment</div>
                             <div id="roiValue" class="result-value profit">-</div>
@@ -161,26 +171,74 @@
         </button>
 
         <div id="infoContent" class="info-content hidden" role="region" aria-expanded="false">
-            <p>Position size is calculated using the following formula:</p>
-            <ol>
-                <li>Calculate risk amount in dollars: Account Size × Risk Percentage</li>
-                <li>Calculate risk per share: Entry Price - Stop Loss Price</li>
-                <li>Calculate number of shares: Risk Amount ÷ Risk Per Share</li>
-                <li>Calculate position size: Number of Shares × Entry Price</li>
-            </ol>
-            <p>This approach ensures you never risk more than your specified percentage of account on any trade.</p>
-            <p>If a target price is specified, additional profit calculations are shown:</p>
-            <ol>
-                <li>Profit Per Share: Target Price - Entry Price</li>
-                <li>Total Profit: Profit Per Share × Number of Shares</li>
-                <li>Return on Investment (ROI): (Total Profit ÷ Position Size) × 100</li>
-                <li>Risk/Reward Ratio: Total Profit ÷ Total Risk Amount</li>
-            </ol>
+            <div class="info-header">
+                <h3 class="info-title">How it Works - Example</h3>
+            </div>
+
+            <div class="example-scenario">
+                <p class="scenario-intro">If you have a <strong>$10,000 account</strong> and want to risk <strong>1%</strong>:</p>
+
+                <div class="calculation-steps">
+                    <div class="calc-step">
+                        <span class="step-label">Your risk budget:</span>
+                        <span class="step-value">$100</span>
+                    </div>
+
+                    <div class="calc-step">
+                        <span class="step-label">Stock price: $50, Stop loss: $48</span>
+                        <span class="step-value">(risking $2 per share)</span>
+                    </div>
+
+                    <div class="calc-step">
+                        <span class="step-label">Shares to buy:</span>
+                        <span class="step-value">$100 ÷ $2 = 50 shares</span>
+                    </div>
+
+                    <div class="calc-step highlight">
+                        <span class="step-label">Position size:</span>
+                        <span class="step-value">50 × $50 = $2,500</span>
+                    </div>
+                </div>
+
+                <div class="info-conclusion">
+                    <p>💡 This way, you never risk more than 1% even if the trade goes wrong!</p>
+                </div>
+            </div>
         </div>
 
+        <button type="button" id="scenariosButton" class="info-button" aria-expanded="false">
+    <span id="scenariosIcon" class="info-icon">+</span>
+    View Risk Scenarios
+</button>
+
+<div id="scenariosContent" class="scenarios-content hidden" role="region" aria-expanded="false">
+    <div class="scenarios-grid">
+        <div class="scenario-item">
+            <div class="scenario-risk">0.1% Risk</div>
+            <div id="scenario-0-1" class="scenario-details">-</div>
+        </div>
+        <div class="scenario-item">
+            <div class="scenario-risk">0.25% Risk</div>
+            <div id="scenario-0-25" class="scenario-details">-</div>
+        </div>
+        <div class="scenario-item">
+            <div class="scenario-risk">0.5% Risk</div>
+            <div id="scenario-0-5" class="scenario-details">-</div>
+        </div>
+        <div class="scenario-item">
+            <div class="scenario-risk">0.75% Risk</div>
+            <div id="scenario-0-75" class="scenario-details">-</div>
+        </div>
+        <div class="scenario-item current">
+            <div class="scenario-risk">1% Risk</div>
+            <div id="scenario-1" class="scenario-details">-</div>
+        </div>
+    </div>
+</div>
+
 <footer class="calculator-footer">
-    Made with <svg class="heart-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" fill="#ff6b6b"/></svg> by Skyler
-    <a href="https://x.com/skylerber">@skylerber on X</a>
+    Made with ❤️ by Skyler
+    <a href="https://discord.gg/t6BZV9nQ">@applevisionpro</a>
 </footer>
     </form>
 
