--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
             <div>
                 <h2 class="section-title">Account Information</h2>
 
+
                 <div class="input-group">
                     <label class="input-label" for="accountSize">Account Size ($)</label>
                     <div class="input-container">
                         <span class="input-prefix">$</span>
                         <input type="text" id="accountSize" class="text-input" placeholder="Enter account size (e.g. 10,000)" required>
                     </div>
+                    <div class="helper-text">Use shorthand: 10k = $10,000 or 1.5m = $1,500,000</div>
                 </div>
 
                 <div class="input-group">
