--- a/index.html
+++ b/index.html
@@ -41,20 +41,25 @@
                 </div>
 
                 <div class="input-group">
-                    <label class="input-label" for="riskPercentage">Risk per Trade (%)</label>
-                    <div class="risk-buttons">
-                      <!-- NEW -->
-                      <button type="button" class="risk-button" data-value="0.1">0.1%</button>
-                      <button type="button" class="risk-button" data-value="0.25">0.25%</button>
-                      <button type="button" class="risk-button" data-value="0.5">0.5%</button>
-                      <button type="button" class="risk-button" data-value="0.75">0.75%</button>
-                      <button type="button" class="risk-button active" data-value="1">1%</button>
-                    </div>
-                    <div class="input-container">
-                        <input type="number" id="riskPercentage" class="number-input number-input-pct" value="1" min="0" max="100" step="0.05" required>
-                        <span class="input-suffix">%</span>
-                    </div>
-                </div>
+    <div class="risk-header">
+        <label class="input-label" for="riskPercentage">Risk per Trade (%)</label>
+        <button type="button" id="quickScenariosButton" class="quick-scenarios-button" aria-expanded="false">
+            <span id="quickScenariosIcon" class="scenarios-icon">📊</span>
+            Risk Scenarios
+        </button>
+    </div>
+    <div class="risk-buttons">
+        <button type="button" class="risk-button" data-value="0.1">0.1%</button>
+        <button type="button" class="risk-button" data-value="0.25">0.25%</button>
+        <button type="button" class="risk-button" data-value="0.5">0.5%</button>
+        <button type="button" class="risk-button" data-value="0.75">0.75%</button>
+        <button type="button" class="risk-button active" data-value="1">1%</button>
+    </div>
+    <div class="input-container">
+        <input type="number" id="riskPercentage" class="number-input number-input-pct" value="1" min="0" max="100" step="0.05" required>
+        <span class="input-suffix">%</span>
+    </div>
+</div>
             </div>
 
             <div>
@@ -210,7 +215,7 @@
 
         <button type="button" id="scenariosButton" class="info-button" aria-expanded="false">
     <span id="scenariosIcon" class="info-icon">+</span>
-    View Risk Scenarios
+    Risk Scenarios
 </button>
 
 <div id="scenariosContent" class="scenarios-content hidden" role="region" aria-expanded="false">
