--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
                             <span class="input-suffix">%</span>
                         </div>
                     </div>
+
+                    <!-- NEW: Max Account Risk Field -->
+                    <div class="input-group">
+                        <label class="input-label" for="maxAccountRisk">Max Account Risk (%) - Optional</label>
+                        <div class="input-container">
+                            <input type="number" id="maxAccountRisk" class="number-input number-input-pct" placeholder="e.g. 10" min="0" max="100" step="0.1">
+                            <span class="input-suffix">%</span>
+                        </div>
+                        <div class="helper-text">Maximum percentage of account for any single position</div>
+                    </div>
                 </div>
 
                 <!-- Trade Details -->
@@ -107,7 +117,7 @@
                             <div class="result-label">Shares to Purchase</div>
                             <div class="result-value" id="sharesValue">-</div>
                         </div>
-                        <div class="result-card">
+                        <div class="result-card" id="positionSizeCard">
                             <div class="result-label">Position Size</div>
                             <div class="result-value large" id="positionSizeValue">-</div>
                         </div>
@@ -119,7 +129,7 @@
                             <div class="result-label">Total Risk Amount</div>
                             <div class="result-value" id="totalRiskValue">-</div>
                         </div>
-                        <div class="result-card">
+                        <div class="result-card" id="percentOfAccountCard">
                             <div class="result-label">% of Account</div>
                             <div class="result-value" id="percentOfAccountValue">-</div>
                         </div>
